--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -4,7 +4,7 @@ chardet==3.0.4
 Click==7.0
 Flask==1.1.1
 google-api-python-client==1.7.11
-google-auth==1.10.1
+google-auth==1.10.0
 google-auth-httplib2==0.0.3
 google-auth-oauthlib==0.4.1
 httplib2==0.15.0
@@ -15,11 +15,12 @@ MarkupSafe==1.1.1
 oauthlib==3.1.0
 pkg-resources==0.0.0
 pyasn1==0.4.8
-pyasn1-modules==0.2.8
+pyasn1-modules==0.2.7
 requests==2.22.0
 requests-oauthlib==1.3.0
 rsa==4.0
 six==1.13.0
+sql==0.4.0
 uritemplate==3.0.1
 urllib3==1.25.7
 Werkzeug==0.15.6
