added setup-tools, removed pkg-resources. works

--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -1,4 +1,4 @@
-cachetools==4.0.0
+cachetools
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
@@ -13,7 +13,8 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 oauthlib==3.1.0
-pkg-resources==0.0.0
+setuptools==40.3.0
+
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
 requests==2.22.0
